# ONET-taxonomy-classification

./: MEMO.md  README.md  pyproject.toml
src/: main.py  openai_model.py  predict.py  text_embedder_processors.py  vectordb_api.py
